tests/macros/plugin/choices.stderr
error: option `choices` does not exist for kind `plugin`
 --> $DIR/choices.rs:2:38
  |
2 |     inquisition::questions![plugin { choices: todo!() }];
  |                                      ^^^^^^^
