tests/macros/plugin/choices.rs
fn main() {
    inquisition::questions![plugin { choices: todo!() }];
}
